Home Page Update

--- a/src/main/webapp/app/home/home.component.html
+++ b/src/main/webapp/app/home/home.component.html
@@ -1,41 +1,23 @@
-<div class="row">
-    <div class="col-md-3">
-        <span class="hipster img-fluid rounded"></span>
+<div id="rfb-home-intro" class="row">
+
+    <div class="col-md-4">
+        <p class="events-header">Running for Brews 5K Events</p>
+        <img src="../../content/images/kevincover.jpg" width="555" height="226"/>
     </div>
-    <div class="col-md-9">
-        <h1 class="display-4">Welcome, Java Hipster!</h1>
-        <p class="lead">This is your homepage</p>
+    <div class="col-md-8">
+        <h1 class="display-4">We love 5k Running & Craft Beers</h1>
 
-        <div [ngSwitch]="isAuthenticated()">
-            <div class="alert alert-success" *ngSwitchCase="true">
-                <span id="home-logged-message" *ngIf="account"
-                   > You are logged in as user "{{account.login}}". </span>
-            </div>
-
-            <div class="alert alert-warning" *ngSwitchCase="false">
-                <span>If you want to </span>
-                <a class="alert-link" (click)="login()">sign in</a><span>, you can try the default accounts:<br/>- Administrator (login="admin" and password="admin") <br/>- User (login="user" and password="user").</span>
-            </div>
-            <div class="alert alert-warning" *ngSwitchCase="false">
-                <span>You don't have an account yet?</span>&nbsp;
-                <a class="alert-link" routerLink="register">Register a new account</a>
-            </div>
-        </div>
-
-        <p>
-            If you have any question on JHipster:
-        </p>
-
-        <ul>
-            <li><a href="https://www.jhipster.tech/" target="_blank" rel="noopener">JHipster homepage</a></li>
-            <li><a href="http://stackoverflow.com/tags/jhipster/info" target="_blank" rel="noopener">JHipster on Stack Overflow</a></li>
-            <li><a href="https://github.com/jhipster/generator-jhipster/issues?state=open" target="_blank" rel="noopener">JHipster bug tracker</a></li>
-            <li><a href="https://gitter.im/jhipster/generator-jhipster" target="_blank" rel="noopener">JHipster public chat room</a></li>
-            <li><a href="https://twitter.com/java_hipster" target="_blank" rel="noopener">follow @java_hipster on Twitter</a></li>
-        </ul>
-
-        <p>
-            <span>If you like JHipster, don't forget to give us a star on</span> <a href="https://github.com/jhipster/generator-jhipster" target="_blank" rel="noopener">GitHub</a>!
-        </p>
+        <p>Lorem ipsum dolor sit amet, modo discere insolens et eam, an mea modo recusabo volutpat, ne per novum tollit
+            detracto. Ex vis luptatum dissentiunt. Modo alia eu ius. Ne paulo doctus eam. Idque blandit commune cu sed,
+            no vis civibus sadipscing reprehendunt.</p>
+        <p>Per blandit consequat id, eu libris ornatus erroribus nec. Te nec modo scriptorem, delectus deserunt scriptorem
+            ea eum. An oblique pertinax adversarium vis, ex sint nullam omittantur eos, vidit epicuri ei his. In nam
+            dicunt vocibus splendide.</p>
+        <p>Ei ius augue ridens eleifend, fugit gloriatur no sed, iisque epicuri legendos et cum. His at purto dicta, ea
+            probo salutatus nec. Mel zril facilis ex, aeque dignissim sea te, id nihil sapientem sit. Semper perpetua
+            facilisis est eu, vis in modo tempor facilisi, pro inani docendi eu. Eos quis vocent elaboraret et.</p>
+        <p>Ad nec paulo debitis, ex quod modo facilisis duo. Utinam accusamus sea eu, sed sint munere nonumes in. Usu
+            solet adipiscing cotidieque cu. Tritani delenit copiosae vel et, ex cum nominati scribentur reformidans,
+            in hinc dissentiet his.</p>
     </div>
 </div>
