--- a/src/main/webapp/app/home/home.css
+++ b/src/main/webapp/app/home/home.css
@@ -2,12 +2,31 @@
 Main page styles
 ========================================================================== */
 
-.hipster {
-    display: inline-block;
-    width: 347px;
-    height: 497px;
-    background: url('../../content/images/hipster.png') no-repeat center top;
+/*.hipster {*/
+    /*display: inline-block;*/
+    /*width: 347px;*/
+    /*height: 497px;*/
+    /*background: url('../../content/images/hipster.png') no-repeat center top;*/
+    /*background-size: contain;*/
+/*}*/
+
+
+#rfb-home-intro {
+    background: url("../../content/images/beer-light.jpg");
     background-size: contain;
+}
+
+.display-4 {
+    font-family: "Walter Turncoat", cursive;
+    margin-top: 10px;
+}
+
+.events-header {
+    font-family: "Walter Turncoat", cursive;
+    font-size: 18px;
+    color: #ffffff;
+    text-align: center;
+    margin-top: 10px;
 }
 
 /* wait autoprefixer update to allow simple generation of high pixel density media query */
