--- a/src/main/webapp/app/layouts/footer/footer.component.html
+++ b/src/main/webapp/app/layouts/footer/footer.component.html
@@ -1,3 +1,3 @@
 <div class="footer">
-    <p>This is your footer</p>
+    <small> Company {{ currentYear }} Tje Running for Brews. All Right Reserved. Please Run Responsibly.</small>
 </div>
