--- a/src/main/webapp/app/layouts/navbar/navbar.css
+++ b/src/main/webapp/app/layouts/navbar/navbar.css
@@ -7,7 +7,7 @@ Navbar
 }
 
 .jh-navbar {
-    background-color: #353d47;
+    background-color: #ffffff;
     padding: 0.2em 1em;
 }
 
@@ -38,6 +38,7 @@ Navbar
 
 .jh-navbar a.nav-link {
     font-weight: 400;
+    color: #0a0a0a;
 }
 
 .jh-navbar .jh-navbar-toggler {
@@ -76,14 +77,14 @@ Logo styles
 
 .logo-img {
     height: 100%;
-    background: url('../../../content/images/logo-jhipster.png') no-repeat center center;
+    background: url('../../../content/images/rfb_logo_small.png') no-repeat center center;
     background-size: contain;
     width: 100%;
 }
 
 .logo .logo-img {
-    height: 45px;
+    height: 60px;
     display: inline-block;
     vertical-align: middle;
-    width: 70px;
+    width: 150px;
 }
